[FIX] align on profile + friend card size

--- a/srcs/services/frontend/src/css/profile.css
+++ b/srcs/services/frontend/src/css/profile.css
@@ -22,7 +22,7 @@ img#pic.avatar {
     opacity : .6;
     background-color : #7000ff;
     color: #FFFFFC;
-    /* height: 120% !important; */
+    height: auto !important;
     overflow-y: auto;
     overflow-x: auto;
 }
